rpc客户端封装

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -8,10 +8,30 @@
 cmake_minimum_required(VERSION 3.16.0)
 project(servertech_chat)
 
+# 设置C++20标准
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_BUILD_TYPE "Debug")
+
+# 为GCC/Clang添加协程支持
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    add_compile_options(-fcoroutines)
+endif()
+
+
+set(PROTOBUF_ROOT_DIR "/home/tlx/project/protobuf-30.2")
+set(PROTOBUF_INSTALL_DIR "${PROTOBUF_ROOT_DIR}/install")
+# 自动查找所有 Abseil 库文件
+file(GLOB ABSL_LIBS "${PROTOBUF_INSTALL_DIR}/lib/libabsl*.so")
+
+# 添加Protobuf库文件路径
+link_directories(
+  ${PROTOBUF_INSTALL_DIR}/lib
+)
 # Boost.Context is required to run stackful coroutines
 # find_package(Boost REQUIRED COMPONENTS headers context json regex url)
 # Darren修改boost路径为/usr/local/lib，因为我们安装的boost是在该路径下
-find_package(Boost REQUIRED COMPONENTS headers context json regex url coroutine PATHS /usr/local/lib)
+find_package(Boost REQUIRED COMPONENTS headers context json regex url coroutine system PATHS /usr/local/lib)
 #find_package(Boost REQUIRED COMPONENTS headers context json regex url)
  
 # OpenSSL is required by Boost.Redis
@@ -20,6 +40,8 @@ find_package(OpenSSL REQUIRED)
 # ICU is required by Boost.Regex
 find_package(ICU COMPONENTS data i18n uc REQUIRED)
 
+# 先生成rpc所需要的头文件
+add_subdirectory(src/rpc)
 # This library is consumed by the actual server and the tests
 add_library(
     servertech_chat
@@ -67,9 +89,21 @@ add_library(
     src/log/logger_wrapper.cpp
     src/log/log_stream.cpp
     src/log/log_persister.cpp
+
+    # rpc
+    src/rpc/rpc_meta.pb.cc
+    src/rpc/ai_server.pb.cc
+    src/rpc/rpc_channel.cpp 
+    src/rpc/rpc_client.cpp
+    src/rpc/zookeeper_op.cpp
+
 )
 
-target_include_directories(servertech_chat PUBLIC include)
+
+
+target_include_directories(servertech_chat
+   PUBLIC include
+   ${PROTOBUF_INSTALL_DIR}/include)
 
 target_link_libraries(
     servertech_chat
@@ -85,8 +119,12 @@ target_link_libraries(
     ICU::data
     ICU::i18n
     ICU::uc
+    Boost::system
     boost_charconv
     pthread
+    ${ABSL_LIBS}
+    protobuf
+    zookeeper_mt
 )
 
 # These are required because we're building Boost.Asio, Boost.Beast and Boost.MySQL
