--- a/tools/rpc/test/mongodb/CMakeLists.txt
+++ b/tools/rpc/test/mongodb/CMakeLists.txt
@@ -1,6 +1,7 @@
+cmake_minimum_required(VERSION 3.27)
 project(mongo_test)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
 # 设置 mongocxx 安装路径（如果你手动装到了 /usr/local）
 set(CMAKE_PREFIX_PATH "/usr/local")
