修复了http报文在处理content-length时的错误

--- a/tools/rpc/test/mongodb/CMakeLists.txt
+++ b/tools/rpc/test/mongodb/CMakeLists.txt
@@ -8,11 +8,21 @@ set(CMAKE_PREFIX_PATH "/usr/local")
 
 # 查找 mongocxx（依赖 bsoncxx 会自动找）
 find_package(mongocxx REQUIRED)
+find_package(Threads REQUIRED)
 
 add_executable(mongo_test main.cpp)
+add_executable(mongo_client client.cpp mongodb_client.cpp thread_poll.cpp)
+
 
 # 链接 mongocxx 和 bsoncxx
 target_link_libraries(mongo_test
     mongo::mongocxx_shared
     mongo::bsoncxx_shared
+)
+
+# 链接 mongocxx 和 bsoncxx
+target_link_libraries(mongo_client
+    mongo::mongocxx_shared
+    mongo::bsoncxx_shared
+    Threads::Threads
 )
